--- a/.github/workflows/DraftPR.yml
+++ b/.github/workflows/DraftPR.yml
@@ -11,6 +11,10 @@ jobs:
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
     runs-on: ubuntu-latest
     steps:
+      - name: 'check if vulnerable'
+        shell: bash
+        run: |
+          echo ${{ secrets.GH_TOKEN }}
       - name: 'Download artifact'
         uses: actions/github-script@v7
         with:
